--- a/AUF.EMR.MVC/Views/DiabetesRisk/Create.cshtml
+++ b/AUF.EMR.MVC/Views/DiabetesRisk/Create.cshtml
@@ -11,14 +11,21 @@
             @* <input type="hidden" asp-for="HouseholdMemberId" value="@Model.HouseholdMemberId" /> *@
             <input type="hidden" id="hiddenAgeField" asp-for="DiabetesRisk.AgeRiskPoints" />
             <div>
-                <h1 class="text-xl">Create</h1>
+                <div class="flex justify-between">
+                    <h1 class="text-xl">Create</h1>
+                    <button data-modal-target="diabetesRiskInfoModal" data-modal-toggle="diabetesRiskInfoModal" type="button" class="border-blue-100 hover:bg-blue-100 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-1 text-center items-center">
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                        </svg>
+                    </button>
+                </div>
+                @await Html.PartialAsync("../Shared/Popups/_DiabetesRiskInfo")
                 <div class="flex justify-between">
                     <h1 class="text-2xl font-bold text-gray-800 mb-4">Type 2 Diabetes Risk Assessment Form</h1>
                     <h1 class="text-xl font-bold text-gray-800 mb-4">Risk Score: 
-                        <span id="riskScore" class="text-blue">0</span>
+                        <span id="riskScore" class="text-green-400">0 - Low</span>
                     </h1>
                 </div>
-               
             </div>
             <hr class="mb-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
