--- a/AUF.EMR.MVC/Views/Shared/Popups/_DiabetesRiskInfo.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Popups/_DiabetesRiskInfo.cshtml
@@ -15,48 +15,47 @@
                 </button>
             </div>
             <!-- Modal body -->
-            <div class="p-4 md:p-5 space-y-4 flex justify-between">
-                <table class="table-fixed">
-                    <thead>
+            <div class="p-4 md:p-5 space-y-4 flex justify-between text-sm">
+                <table class="table w-full text-sm text-left">
+                    <thead class="bg-gray-50">
                         <tr>
-                            <th>Scores</th>
-                            <th>Risk</th>
-                            <th>Description</th>
+                            <th class="px-6 py-3 whitespace-nowrap">Scores</th>
+                            <th class="px-6 py-3 whitespace-nowrap">Risk</th>
+                            <th class="px-6 py-3 whitespace-nowrap">Description</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>Lower than 7</td>
-                            <td>Low</td>
-                            <td>Estimated 1 in 100 will develop disease</td>
+                        <tr class="bg-white border-b">
+                            <th scope="row" class="px-6 py-4 font-semibold text-green-400 whitespace-nowrap">Lower than 7</th>
+                            <td class="px-6">Low</td>
+                            <td class="px-6">Estimated 1 in 100 will develop disease</td>
                         </tr>
-                        <tr>
-                            <td>7-11</td>
-                            <td>Slightly elevated</td>
-                            <td>estimated 1 in 25 will develop disease</td>
+                        <tr class="bg-white border-b">
+                            <th scope="row" class="px-6 py-4 font-semibold text-yellow-400 whitespace-nowrap">7-11</th>
+                            <td class="px-6">Slightly elevated</td>
+                            <td class="px-6">Estimated 1 in 25 will develop disease</td>
                         </tr>
-                        <tr>
-                            <td>12-14</td>
-                            <td>Moderate</td>
-                            <td>estimated 1 in 6 will develop disease</td>
+                        <tr class="bg-white border-b">
+                            <th scope="row" class="px-6 py-4 font-semibold text-orange-500 whitespace-nowrap">12-14</th>
+                            <td class="px-6">Moderate</td>
+                            <td class="px-6">Estimated 1 in 6 will develop disease</td>
                         </tr>
-                        <tr>
-                            <td>15-20</td>
-                            <td>High</td>
-                            <td>estimated 1 in 3 will develop disease</td>
+                        <tr class="bg-white border-b">
+                            <th scope="row" class="px-6 py-4 font-semibold text-pink-500 whitespace-nowrap">15-20</th>
+                            <td class="px-6">High</td>
+                            <td class="px-6">Estimated 1 in 3 will develop disease</td>
                         </tr>
-                        <tr>
-                            <td>Higher than 20</td>
-                            <td>Very High</td>
-                            <td>estimated 1 in 2 will develop disease</td>
+                        <tr class="bg-white border-b">
+                            <th scope="row" class="px-6 py-4 font-semibold text-red-500 whitespace-nowrap">Higher than 20</th>
+                            <td class="px-6">Very High</td>
+                            <td class="px-6">Estimated 1 in 2 will develop disease</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
             <!-- Modal footer -->
-            <div class="flex items-center p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
-                <button data-modal-hide="diabetesRiskInfoModal" type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">I accept</button>
-                <button data-modal-hide="diabetesRiskInfoModal" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Decline</button>
+            <div class="flex justify-end p-4 md:p-5 border-t border-gray-200 rounded-b">
+                <button data-modal-hide="diabetesRiskInfoModal" type="button" class="text-white bg-primary-50 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">I understand</button>
             </div>
         </div>
     </div>
