--- a/AUF.EMR.MVC/Views/DiabetesRisk/Index.cshtml
+++ b/AUF.EMR.MVC/Views/DiabetesRisk/Index.cshtml
@@ -1,89 +1,76 @@
 ﻿@model DiabetesRiskVM
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Diabetes Risk Records";
+    Layout = "Layouts/_FormLayout";
+    ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
-<h1>Index</h1>
+<div class="container mx-auto px-4 py-8">
+    <div class="bg-white shadow-md rounded-lg p-8">
+        <div class="flex justify-between items-center mb-4">
+            <div>
+                <h1 class="text-xl">List of</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Type 2 Diabetes Risk Assessment Forms</h1>
+            </div>
 
-<p>
-    <a asp-action="Create" asp-route-householdNo="@Model.HouseholdNo">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.DiabetesRisks[0].HouseholdMember)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DiabetesRisks[0].IsPhysicallyActive)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DiabetesRisks[0].EatsVegetablesEveryDay)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DiabetesRisks[0].TakingHighBloodPressureMedication)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DiabetesRisks[0].HasHighBloodGlucose)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DiabetesRisks[0].FamilyWithDiabetesRiskPoints)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DiabetesRisks[0].Status)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DiabetesRisks[0].DateCreated)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DiabetesRisks[0].LastModified)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DiabetesRisks[0].ModifiedById)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.DiabetesRisks) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.HouseholdMember.FormattedFullName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsPhysicallyActive)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EatsVegetablesEveryDay)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TakingHighBloodPressureMedication)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HasHighBloodGlucose)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FamilyWithDiabetesRiskPoints)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateCreated)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastModified)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ModifiedById)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+            <div class="flex justify-end space-x-2 mb-6">
+                <a asp-action="Create" asp-route-householdNo="@Model.HouseholdNo" class="px-5 py-2.5 max-h-12 text-sm font-medium text-center inline-flex items-center text-white bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-green-200" aria-label="Add WRA">
+                    <svg class="w-6 h-6 text-white mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                        <path fill-rule="evenodd" d="M5 4a2 2 0 0 0-2 2v1h10.968l-1.9-2.28A2 2 0 0 0 10.532 4H5ZM3 19V9h18v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2Zm9-8.5a1 1 0 0 1 1 1V13h1.5a1 1 0 1 1 0 2H13v1.5a1 1 0 1 1-2 0V15H9.5a1 1 0 1 1 0-2H11v-1.5a1 1 0 0 1 1-1Z" clip-rule="evenodd" />
+                    </svg>
+                    Add a Form
+                </a>
+            </div>
+        </div>
+        <hr class="mb-4" />
+        <div style="overflow:auto;">
+            <table class="table-auto w-full">
+                <thead>
+                    <tr class="bg-gray-200 text-sm">
+                        <th class="px-4 py-2 text-left">Assessment For</th>
+                        <th class="px-4 py-2 text-left">Age</th>
+                        <th class="px-4 py-2 text-left">Total Score</th>
+                        <th class="px-4 py-2 text-left">Risk Score</th>
+                        <th class="px-4 py-2 text-left">Date Created</th>
+                        <th class="px-4 py-2 text-left">Last Updated</th>
+                        <th class="px-4 py-2 text-left">Actions</th>
+                    </tr>
+                </thead>
+                <!--Table Contents-->
+                <tbody>
+                    @foreach (var item in Model.DiabetesRisks)
+                    {
+                        <tr class="text-sm hover-household transition duration-300 ease-in-out border-b border-gray-100 ">
+                            <td class="px-4 py-2 text-left">
+                                @Html.DisplayFor(modelItem => item.HouseholdMember.FormattedFullName)
+                            </td>
+                            <td class="px-4 py-2 text-left">
+                                @Html.DisplayFor(modelItem => item.HouseholdMember.Age)
+                            </td>
+                            <td class="px-4 py-2 text-left">
+                                @Html.DisplayFor(modelItem => item.TotalScore)
+                            </td>
+                            <td class="px-4 py-2 text-left">
+                                @Html.DisplayFor(modelItem => item.Risk)
+                            </td>
+                            <td class="px-4 py-2 text-left">
+                                @item.DateCreated.ToString("MMM dd, yyyy")
+                            </td>
+                            <td class="px-4 py-2 text-left">
+                                @item.LastModified.ToString("MMM dd, yyyy")
+                            </td>
+
+                            <!--Action Button-->
+                            <td class="px-4 py-2 inline-flex items-center text-center text-lg">
+                                <a asp-action="Details" asp-route-id="@item.Id" asp-route-householdNo="@Model.HouseholdNo" class="text-green-400 hover:text-green-500 mr-2"><i class="fas fa-eye"></i></a>
+                                <button type="button" onclick="print('Print', 'PatientRecord', @Model.HouseholdNo, @item.Id, @item.HouseholdMemberId)" class="text-blue-400 hover:text-blue-600 mr-2"><i class="fa-solid fa-print"></i></button>
+                                <button data-modal-target="popup-modal-2" data-modal-toggle="popup-modal-2" data-member-id="@item.Id" class="delete-btn text-red-400 hover:text-red-500 mr-2"><i class="fas fa-trash"></i></button>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
