--- a/AUF.EMR.MVC/Views/DiabetesRisk/Details.cshtml
+++ b/AUF.EMR.MVC/Views/DiabetesRisk/Details.cshtml
@@ -1,8 +1,7 @@
-﻿@model DetailPregnancyTrackVM
+﻿@model DetailDiabetesRiskVM
 
 @{
-    ViewData["Title"] = "National Safe Motherhood Program - Details";
-    Layout = "Layouts/_DetailsLayout";
+    ViewData["Title"] = "Details";
     ViewData["HouseholdNo"] = Model.HouseholdNo;
 }
 
@@ -11,17 +10,17 @@
         <div class="flex justify-between">
             <div>
                 <h1 class="text-xl">Details</h1>
-                <h1 class="text-2xl font-bold text-gray-800 mb-4">Pregnancy Tracking</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Type 2 Diabetes Risk Assessment Form</h1>
             </div>
             <div>
-                <a asp-action="Edit" asp-route-id="@Model.PregnancyTracking.Id" asp-route-householdNo="@Model.HouseholdNo" class="px-5 py-2.5 text-sm font-medium text-center inline-flex items-center text-white bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-green-200">
+                <a asp-action="Edit" asp-route-id="@Model.DiabetesRisk.Id" asp-route-householdNo="@Model.HouseholdNo" class="px-5 py-2.5 text-sm font-medium text-center inline-flex items-center text-white bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-green-200">
                     <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                         <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd" />
                         <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd" />
                     </svg>
                     Update
                 </a>
-                <button data-modal-target="popup-modal-2" data-member-id="@Model.PregnancyTracking.Id" data-modal-toggle="popup-modal-2" class="delete-btn px-5 py-2.5 text-sm font-medium text-center inline-flex items-center text-white bg-danger-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-red-100" type="button">
+                <button data-modal-target="popup-modal-2" data-member-id="@Model.DiabetesRisk.Id" data-modal-toggle="popup-modal-2" class="delete-btn px-5 py-2.5 text-sm font-medium text-center inline-flex items-center text-white bg-danger-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-red-100" type="button">
                     <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                         <path fill-rule="evenodd" d="M8.586 2.586A2 2 0 0 1 10 2h4a2 2 0 0 1 2 2v2h3a1 1 0 1 1 0 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V8a1 1 0 0 1 0-2h3V4a2 2 0 0 1 .586-1.414ZM10 6h4V4h-4v2Zm1 4a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Zm4 0a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Z" clip-rule="evenodd" />
                     </svg>
@@ -39,7 +38,7 @@
                         </svg>
                         <span class="sr-only">Close modal</span>
                     </button>
-                    <form id="deleteForm" asp-action="Delete" asp-controller="PregnancyTracking" asp-route-id="@Model.PregnancyTracking.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl">
+                    <form id="deleteForm" asp-action="Delete" asp-controller="PregnancyTracking" asp-route-id="@Model.DiabetesRisk.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl">
                         <div class="p-4 md:p-5 text-center">
                             <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
@@ -59,76 +58,98 @@
             <hr class="mb-2" />
             <dl class="grid grid-cols-1 md:grid-cols-2 gap-y-4 gap-x-8 py-5 text-sm">
                 <div class="flex items-center">
-                    <dt class="text-gray-700 font-semibold mr-10 flex-shrink-0 w-44">Name</dt>
-                    <dd class="text-gray-900">@Model.PregnancyTracking.HouseholdMember.FullName</dd>
+                    <dt class="text-gray-700 font-semibold mr-10 flex-shrink-0 w-44">Assessment for</dt>
+                    <dd class="text-gray-900">@Model.DiabetesRisk.HouseholdMember.FormattedFullName</dd>
                 </div>
 
                 <div class="flex items-center ">
-                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">Pregnancy Outcome</dt>
-                    <dd class="text-gray-900">@Model.PregnancyTracking.PregnancyOutcome</dd>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">How often do you eat vegetables, fruits, or berries?</dt>
+                    <dd class="text-gray-900">@(Model.DiabetesRisk.EatsVegetablesEveryDay ? "0 pts - Every day" : "1 pt - Not every day")</dd>
                 </div>
 
                 <div class="flex items-center ">
                     <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">Age</dt>
-                    <dd class="text-gray-900">@Model.PregnancyTracking.Age</dd>
+                    <dd class="text-gray-900">
+                        @(
+                            (int)Model.DiabetesRisk.AgeRiskPoints switch
+                            {
+                                0 => "0 pts - Under 45 years",
+                                2 => "2 pts - 45-54 years",
+                                3 => "3 pts - 55-64 years",
+                                4 => "4 pts - Over 64 years",
+                            }
+                            )
+                    </dd>
                 </div>
 
                 <div class="flex items-center ">
-                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">24hrs after birth</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.PostnatalCheckUp24hrs.HasValue) ? Model.PregnancyTracking.PostnatalCheckUp24hrs.Value.ToString("MMM/dd/yyyy") : "")</dd>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">Do you regularly take medication for high blood pressure?</dt>
+                    <dd class="text-gray-900">@(Model.DiabetesRisk.TakingHighBloodPressureMedication ? "2 pts - Yes" : "0 pts - No")</dd>
                 </div>
 
                 <div class="flex items-center ">
-                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">Gravidity</dt>
-                    <dd class="text-gray-900">@Model.PregnancyTracking.Gravidity</dd>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">Body-Mass Index</dt>
+                    <dd class="text-gray-900">
+                        @(
+                            (int)Model.DiabetesRisk.BmiRiskPoints switch
+                            {
+                                0 => "0 pts - Lower than 25 km/m²",
+                                1 => "1 pts - 25-30 km/m²",
+                                3 => "3 pts - Higher than 30 km/m²",
+                            }
+                            )
+                    </dd>
                 </div>
 
                 <div class="flex items-center ">
-                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">7 days after birth</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.PostnatalCheckUp7days.HasValue) ? Model.PregnancyTracking.PostnatalCheckUp7days.Value.ToString("MMM/dd/yyyy") : "")</dd>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">Have you ever been found to have high blood glucose?</dt>
+                    <dd class="text-gray-900">@(Model.DiabetesRisk.HasHighBloodGlucose ? "5 pts - Yes" : "0 pts - No")</dd>
                 </div>
 
                 <div class="flex items-center ">
-                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">Parity</dt>
-                    <dd class="text-gray-900">@Model.PregnancyTracking.Parity</dd>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">Waist Circumference</dt>
+                    <dd class="text-gray-900">
+                        @(
+                            Model.DiabetesRisk.HouseholdMember.Sex == 'M' ?
+                            (int)Model.DiabetesRisk.WaistCircumferenceMenRiskPoints switch
+                            {
+                                0 => "0 pts - Lower than 94 cm",
+                                3 => "3 pts - 94-102 cm",
+                                4 => "4 pts - More than 102 cm",
+                            } :
+                            (int)Model.DiabetesRisk.WaistCircumferenceWomenRiskPoints switch
+                            {
+                                0 => "0 pts - Lower than 80 cm",
+                                3 => "3 pts - 80-88 cm",
+                                4 => "4 pts - More than 88 cm",
+                            }
+                        )
+                    </dd>
                 </div>
 
                 <div class="flex items-center ">
-                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">Civil Registration</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.PostnatalCheckUp24hrs.HasValue) ? Model.PregnancyTracking.PostnatalCheckUp24hrs.Value.ToString("MMM/dd/yyyy") : "")</dd>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">Does anyone in your immediate or extended family have diabetes?</dt>
+                    <dd class="text-gray-900">
+                        @(
+                            (int)Model.DiabetesRisk.FamilyWithDiabetesRiskPoints switch
+                            {
+                                0 => "0 pts - No",
+                                3 => "3 pts - Yes; grandparent, aunt, uncle or first cousin",
+                                5 => "5 pts - Yes; parent, brother, sister or own child",
+                            }
+                        )
+                    </dd>
                 </div>
 
                 <div class="flex items-center ">
-                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">Expected Date of Delivery</dt>
-                    <dd class="text-gray-900">@Model.PregnancyTracking.ExpectedDateOfDelivery.ToString("MMM/dd/yyyy")</dd>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">Do you usually have daily at least 30 minutes of physical activity?</dt>
+                    <dd class="text-gray-900">@(Model.DiabetesRisk.IsPhysicallyActive ? "0 pts - Yes" : "2 pts - No")</dd>
                 </div>
-
-                <div></div>
+                
 
                 <div class="flex items-center ">
-                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">1st Trimester Check-Up</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.FirstAntenatalCheckUp.HasValue) ? Model.PregnancyTracking.FirstAntenatalCheckUp.Value.ToString("MMM/dd/yyyy") : "")</dd>
-                </div>
-
-                <div></div>
-
-                <div class="flex items-center ">
-                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">2nd Trimester Check-Up</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.SecondAntenatalCheckUp.HasValue) ? Model.PregnancyTracking.SecondAntenatalCheckUp.Value.ToString("MMM/dd/yyyy") : "")</dd>
-                </div>
-
-                <div></div>
-
-                <div class="flex items-center ">
-                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">3rd Trimester Check-Up</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.ThirdAntenatalCheckUp.HasValue) ? Model.PregnancyTracking.ThirdAntenatalCheckUp.Value.ToString("MMM/dd/yyyy") : "")</dd>
-                </div>
-
-                <div></div>
-
-                <div class="flex items-center ">
-                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">Other Check-Up</dt>
-                    <dd class="text-gray-900">@((Model.PregnancyTracking.MoreCheckUp.HasValue) ? Model.PregnancyTracking.MoreCheckUp.Value.ToString("MMM/dd/yyyy") : "")</dd>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-44">Total risk score</dt>
+                    <dd class="text-gray-900">@Model.DiabetesRisk.TotalScore pts - @Model.DiabetesRisk.Risk</dd>
                 </div>
             </dl>
         </div>
